--- a/TodoListManager/res/layout/activity_add_new_todo_item.xml
+++ b/TodoListManager/res/layout/activity_add_new_todo_item.xml
@@ -1,14 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="5dp"
+    android:padding="10dp"
     android:orientation="vertical" >
 
     <EditText
         android:id="@+id/edtNewItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:hint="@string/new_item_field_hint" >
 
         <requestFocus />
@@ -22,7 +21,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp"
+        android:paddingTop="10dp"
         android:orientation="horizontal" >
 
         <Button
