--- a/TodoListManager/res/layout/todo_item_row.xml
+++ b/TodoListManager/res/layout/todo_item_row.xml
@@ -10,6 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1"
+        android:gravity="left|center_horizontal"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 	
 	
@@ -18,7 +19,7 @@
 		android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:gravity="center_horizontal"
+        android:gravity="right|center_horizontal"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 		         
 </LinearLayout>
