--- a/TodoListManager/res/layout/activity_add_new_todo_item.xml
+++ b/TodoListManager/res/layout/activity_add_new_todo_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/edtNewItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:hint="@string/new_item_field_hint" >
 
         <requestFocus />
@@ -16,12 +17,14 @@
     <DatePicker
         android:id="@+id/datePicker"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
+        android:padding="3dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal" >
 
         <Button
